GNOME Bugzilla – Bug 730044
Details of a PGP key should show whether subkeys are usable for Signing/Encryption
Last modified: 2014-07-29 09:56:41 UTC
In the Details page of a PGP key's properties window, it would be useful to know if a subkey can be used for signing and/or encryption. The attached patch implements this.
Created attachment 276425 [details] [review] seahorse-usage.patch
Thanks. Nice! Committed with some whitespace tweaks.