pgp-key-properties: Show whether subkeys can be used for signing/encryption

https://bugzilla.gnome.org/show_bug.cgi?id=730044
Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Signed-off-by: Stef Walter <stefw@gnome.org>
 * Fixed whitespace